Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.124:2.1": "„Hausbesitzer, es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.124:2.2": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, stützt sich sein Bewusstsein auf diesen Vorgang und ergreift ihn. ",
   "sn35.124:2.3": "Ein Mönch, der ergreift, erlischt nicht. ",
-  "sn35.124:2.4": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … "
+  "sn35.124:2.4": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
+  "sn35.124:2.5": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
