--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.124:2.4": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
   "sn35.124:2.5": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.124:2.6": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, stützt sich ihr Bewusstsein auf diesen Vorgang und ergreift ihn. ",
-  "sn35.124:2.7": "Eine Nonne, die ergreift, erlischt nicht. "
+  "sn35.124:2.7": "Eine Nonne, die ergreift, erlischt nicht. ",
+  "sn35.124:2.8": "Das ist der Grund, das ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen. "
 }
