--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.124:2.6": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, stützt sich ihr Bewusstsein auf diesen Vorgang und ergreift ihn. ",
   "sn35.124:2.7": "Eine Nonne, die ergreift, erlischt nicht. ",
   "sn35.124:2.8": "Das ist der Grund, das ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen. ",
-  "sn35.124:3.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "sn35.124:3.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "sn35.124:3.2": "Wenn ein Mönch diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, stützt sich sein Bewusstsein nicht auf diesen Vorgang und ergreift ihn nicht. "
 }
