--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.124:2.8": "Das ist der Grund, das ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen. ",
   "sn35.124:3.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.124:3.2": "Wenn ein Mönch diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, stützt sich sein Bewusstsein nicht auf diesen Vorgang und ergreift ihn nicht. ",
-  "sn35.124:3.3": "Ein Mönch, der von Ergreifen frei ist, erlischt. "
+  "sn35.124:3.3": "Ein Mönch, der von Ergreifen frei ist, erlischt. ",
+  "sn35.124:3.4": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … "
 }
