--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.124_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn35.124:3.3": "Ein Mönch, der von Ergreifen frei ist, erlischt. ",
   "sn35.124:3.4": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
   "sn35.124:3.5": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "sn35.124:3.6": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, stützt sich ihr Bewusstsein nicht auf diesen Vorgang und ergreift ihn nicht. "
+  "sn35.124:3.6": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, stützt sich ihr Bewusstsein nicht auf diesen Vorgang und ergreift ihn nicht. ",
+  "sn35.124:3.7": "Eine Nonne, die von Ergreifen frei ist, erlischt. "
 }
