Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -1001,6 +1001,7 @@
   "sn-name:1107.sn35.122": "Dinge, die einen leicht fesseln ",
   "sn-name:1108.sn35.123": "Dinge, die zum Ergreifen einladen ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
+  "sn-name:1110.sn35.124": "In Vesālī ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
   "sn-name:1121.sn35.134": "Bei Devadaha ",
