Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.125_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.125_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.125_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.125:0.1": "Verbundene Lehrreden 35.125 ",
-  "sn35.125:0.2": "13. Das Kapitel mit Hausbesitzern "
+  "sn35.125:0.2": "13. Das Kapitel mit Hausbesitzern ",
+  "sn35.125:0.3": "Im Land der Vajjier "
 }
