--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.126_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.126_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn35.126:0.1": "Verbundene Lehrreden 35.126 ",
   "sn35.126:0.2": "13. Das Kapitel mit Hausbesitzern ",
-  "sn35.126:0.3": "Bei Nālandā "
+  "sn35.126:0.3": "Bei Nālandā ",
+  "sn35.126:1.1": "Einmal hielt sich der Buddha bei Nālandā in Pāvārikas Mangowäldchen auf. "
 }
