Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.127:0.1": "Verbundene Lehrreden 35.127 ",
   "sn35.127:0.2": "13. Das Kapitel mit Hausbesitzern ",
   "sn35.127:0.3": "Mit Bhāradvāja ",
-  "sn35.127:1.1": "Einmal hielt sich der Ehrwürdige Bhāradvāja der Almosensammler bei Kosambi auf, in Ghositas Kloster. "
+  "sn35.127:1.1": "Einmal hielt sich der Ehrwürdige Bhāradvāja der Almosensammler bei Kosambi auf, in Ghositas Kloster. ",
+  "sn35.127:1.2": "Da ging der König Udena zu Bhāradvāja dem Almosensammler und tauschte Willkommensgrüße mit ihm aus. "
 }
