--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -4,5 +4,5 @@
   "sn35.127:0.3": "Mit Bhāradvāja ",
   "sn35.127:1.1": "Einmal hielt sich der Ehrwürdige Bhāradvāja der Almosensammler bei Kosambi auf, in Ghositas Kloster. ",
   "sn35.127:1.2": "Da ging der König Udena zu Bhāradvāja dem Almosensammler und tauschte Willkommensgrüße mit ihm aus. ",
-  "sn35.127:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zu ihm: "
+  "sn35.127:1.3": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zu Bhāradvāja: "
 }
