Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn35.127:2.1": "„Aber Meister Bhāradvāja, der Geist is zügellos. ",
   "sn35.127:2.2": "Manchmal kommen begehrliche Gedanken selbst bei Frauen im Alter der eigenen Mutter, der eigenen Schwester oder der eigenen Tochter auf. ",
   "sn35.127:2.3": "Gibt es einen anderen Grund, eine andere Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben?“ ",
-  "sn35.127:3.1": "„Großer König, vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha wurde gesagt: "
+  "sn35.127:3.1": "„Großer König, vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha wurde gesagt: ",
+  "sn35.127:3.2": "‚Bitte, Mönche, betrachtet euren eigenen Körper von den Fußsohlen aufwärts und von den Haarspitzen abwärts, der von Haut umhüllt und mit zahlreichen widerlichen Dingen angefüllt ist. "
 }
