Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -15,5 +15,5 @@
   "sn35.127:3.1": "„Großer König, vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha wurde gesagt: ",
   "sn35.127:3.2": "‚Bitte, Mönche, betrachtet euren eigenen Körper von den Fußsohlen aufwärts und von den Haarspitzen abwärts, der von Haut umhüllt und mit zahlreichen widerlichen Dingen angefüllt ist. ",
   "sn35.127:3.3": "In diesem Körper gibt es Kopfhaare, Körperhaare, Nägel, Zähne, Haut, Fleisch, Sehnen, Knochen, Knochenmark, Nieren, Herz, Leber, Zwerchfell, Milz, Lungen, Därme, Gekröse, Speisebrei, Kot, Galle, Schleim, Eiter, Blut, Schweiß, Fett, Tränen, Talg, Speichel, Nasenschleim, Gelenkschmiere, Urin.‘ ",
-  "sn35.127:3.4": "Auch das ist ein Grund, großer König, eine Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben, und es über lange Zeit aufrechterhalten.“ "
+  "sn35.127:3.4": "Auch das ist ein Grund, großer König, das ist eine Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben, und es über lange Zeit aufrechterhalten.“ "
 }
