--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn35.127:4.1": "„Großer König, vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha wurde gesagt: ",
   "sn35.127:4.2": "‚Bitte, Mönche, lebt, indem ihr die Tore der Sinne bewacht. ",
   "sn35.127:4.3": "Wenn ihr mit dem Auge ein Bild seht, bleibt nicht an den Merkmalen und Einzelheiten hängen. ",
-  "sn35.127:4.4": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt Zügelung, bewacht das Sehvermögen und haltet es im Zaum. "
+  "sn35.127:4.4": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt Zügelung, bewacht das Sehvermögen und haltet es im Zaum. ",
+  "sn35.127:4.5": "Wenn ihr mit dem Ohr einen Ton hört … "
 }
