--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn35.127:4.3": "Wenn ihr mit dem Auge ein Bild seht, bleibt nicht an den Merkmalen und Einzelheiten hängen. ",
   "sn35.127:4.4": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt Zügelung, bewacht das Sehvermögen und haltet es im Zaum. ",
   "sn35.127:4.5": "Wenn ihr mit dem Ohr einen Ton hört … ",
-  "sn35.127:4.6": "Wenn ihr mit der Nase einen Duft riecht … "
+  "sn35.127:4.6": "Wenn ihr mit der Nase einen Duft riecht … ",
+  "sn35.127:4.7": "Wenn ihr mit der Zunge einen Geschmack schmeckt … "
 }
