Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn35.127:4.4": "Wenn das Sehvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt Zügelung, bewacht das Sehvermögen und haltet es im Zaum. ",
   "sn35.127:4.5": "Wenn ihr mit dem Ohr einen Ton hört … ",
   "sn35.127:4.6": "Wenn ihr mit der Nase einen Duft riecht … ",
-  "sn35.127:4.7": "Wenn ihr mit der Zunge einen Geschmack schmeckt … "
+  "sn35.127:4.7": "Wenn ihr mit der Zunge einen Geschmack schmeckt … ",
+  "sn35.127:4.8": "Wenn ihr mit dem Körper eine Berührung empfindet … "
 }
