--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn35.127:4.7": "Wenn ihr mit der Zunge einen Geschmack schmeckt … ",
   "sn35.127:4.8": "Wenn ihr mit dem Körper eine Berührung empfindet … ",
   "sn35.127:4.9": "Wenn ihr mit dem Geist einen Gedanken erkennt, bleibt nicht an den Merkmalen und Einzelheiten hängen. ",
-  "sn35.127:4.10": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt Zügelung, bewacht das Denkvermögen und haltet es im Zaum.‘ "
+  "sn35.127:4.10": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt Zügelung, bewacht das Denkvermögen und haltet es im Zaum.‘ ",
+  "sn35.127:4.11": "Auch das ist ein Grund, großer König, das ist eine Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben, und es über lange Zeit aufrechterhalten.“ "
 }
