Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn35.127:4.10": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt Zügelung, bewacht das Denkvermögen und haltet es im Zaum.‘ ",
   "sn35.127:4.11": "Auch das ist ein Grund, großer König, das ist eine Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben, und es über lange Zeit aufrechterhalten.“ ",
   "sn35.127:5.1": "„Es ist unglaublich, Meister Bhāradvāja, es ist erstaunlich, ",
-  "sn35.127:5.2": "wie treffend das vom Buddha gesagt wurde! "
+  "sn35.127:5.2": "wie treffend das vom Buddha gesagt wurde! ",
+  "sn35.127:5.3": "Das ist der wahre Grund, das ist die Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben, und es über lange Zeit aufrechterhalten. "
 }
