--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn35.127:5.1": "„Es ist unglaublich, Meister Bhāradvāja, es ist erstaunlich, ",
   "sn35.127:5.2": "wie treffend das vom Buddha gesagt wurde! ",
   "sn35.127:5.3": "Das ist der wahre Grund, das ist die Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben, und es über lange Zeit aufrechterhalten. ",
-  "sn35.127:5.4": "Denn auch ich betrete manchmal den Harem, ohne Körper, Sprache und Geist zu bewachen, ohne die Achtsamkeit zu verankern und ohne die Sinne zu zügeln. Zu diesen Zeiten gehen machtvolle begehrliche Gedanken mit mir durch. "
+  "sn35.127:5.4": "Denn auch ich betrete manchmal den Harem, ohne Körper, Sprache und Geist zu bewachen, ohne die Achtsamkeit zu verankern und ohne die Sinne zu zügeln. Zu diesen Zeiten gehen machtvolle begehrliche Gedanken mit mir durch. ",
+  "sn35.127:5.5": "Aber manchmal betrete ich den Harem und bewache Körper, Sprache und Geist, verankere die Achtsamkeit und zügele die Sinne. Zu diesen Zeiten gehen solche Gedanken nicht mit mir durch. "
 }
