--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn35.127:5.5": "Aber manchmal betrete ich den Harem und bewache Körper, Sprache und Geist, verankere die Achtsamkeit und zügele die Sinne. Zu diesen Zeiten gehen solche Gedanken nicht mit mir durch. ",
   "sn35.127:5.6": "Vortrefflich, Meister Bhāradvāja! Vortrefflich! ",
   "sn35.127:5.7": "Als würde er das Umgestürzte aufrichten oder das Verborgene enthüllen oder den Verirrten den Weg weisen oder im Dunkeln ein Licht anzünden, sodass Menschen mit guten Augen sehen könnten, was da ist, so hat Meister Bhāradvāja die Lehre auf vielerlei Weise klargemacht. ",
-  "sn35.127:5.8": "Ich nehme Zuflucht zum Buddha, zur Lehre und zum Saṅgha der Mönche und Nonnen. "
+  "sn35.127:5.8": "Ich nehme Zuflucht zum Buddha, zur Lehre und zum Saṅgha der Mönche und Nonnen. ",
+  "sn35.127:5.9": "Von diesem Tag an soll Meister Bhāradvāja mich als Laienschüler in Erinnerung behalten, der für sein ganzes Leben Zuflucht genommen hat.“ "
 }
