Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.127_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "sn35.127:1.5": "„Großer König, vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha wurde gesagt: ",
   "sn35.127:1.6": "‚Bitte, Mönche, denkt an Frauen im Alter eurer Mutter wie an eure Mutter, an Frauen im Alter eurer Schwester wie an eure Schwester und an Frauen im Alter eurer Tochter wie an eure Tochter.‘ ",
   "sn35.127:1.7": "Das ist der Grund, das ist die Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben, und es über lange Zeit aufrechterhalten.“ ",
-  "sn35.127:2.1": "„Aber Meister Bhāradvāja, der Geist is zügellos. ",
+  "sn35.127:2.1": "„Aber Meister Bhāradvāja, der Geist ist zügellos. ",
   "sn35.127:2.2": "Manchmal kommen begehrliche Gedanken selbst bei Frauen im Alter der eigenen Mutter, der eigenen Schwester oder der eigenen Tochter auf. ",
   "sn35.127:2.3": "Gibt es einen anderen Grund, eine andere Ursache, dass diese jungen Mönche das vollkommene und reine geistliche Leben führen, solange sie leben?“ ",
   "sn35.127:3.1": "„Großer König, vom Gesegneten, der erkennt und sieht, dem Vollendeten, dem vollkommen erwachten Buddha wurde gesagt: ",
