--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.128_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.128_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.128:0.1": "Verbundene Lehrreden 35.128 "
+  "sn35.128:0.1": "Verbundene Lehrreden 35.128 ",
+  "sn35.128:0.2": "13. Das Kapitel mit Hausbesitzern "
 }
