Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -1005,6 +1005,7 @@
   "sn-name:1111.sn35.125": "Im Land der Vajjier ",
   "sn-name:1112.sn35.126": "Bei Nālandā ",
   "sn-name:1113.sn35.127": "Mit Bhāradvāja ",
+  "sn-name:1114.sn35.128": "Mit Soṇa ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
   "sn-name:1121.sn35.134": "Bei Devadaha ",
