Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.128_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.128_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.128_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.128:0.1": "Verbundene Lehrreden 35.128 ",
   "sn35.128:0.2": "13. Das Kapitel mit Hausbesitzern ",
   "sn35.128:0.3": "Mit Soṇa ",
-  "sn35.128:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. "
+  "sn35.128:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
+  "sn35.128:1.2": "Da ging der Hausbesitzer Soṇa zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: "
 }
