--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.128_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.128_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.128:0.2": "13. Das Kapitel mit Hausbesitzern ",
   "sn35.128:0.3": "Mit Soṇa ",
   "sn35.128:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
-  "sn35.128:1.2": "Da ging der Hausbesitzer Soṇa zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: "
+  "sn35.128:1.2": "Da ging der Hausbesitzer Soṇa zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
+  "sn35.128:1.3": "„Was ist der Grund, Herr, was ist die Ursache, dass manche Lebewesen in diesem Leben nicht vollkommen erlöschen? "
 }
