--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn35.129:0.1": "Verbundene Lehrreden 35.129 ",
   "sn35.129:0.2": "13. Das Kapitel mit Hausbesitzern ",
-  "sn35.129:0.3": "Mit Ghosita "
+  "sn35.129:0.3": "Mit Ghosita ",
+  "sn35.129:1.1": "Einmal hielt sich der Ehrwürdige Ānanda bei Kosambi auf, in Ghositas Kloster. "
 }
