--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.129:0.2": "13. Das Kapitel mit Hausbesitzern ",
   "sn35.129:0.3": "Mit Ghosita ",
   "sn35.129:1.1": "Einmal hielt sich der Ehrwürdige Ānanda bei Kosambi auf, in Ghositas Kloster. ",
-  "sn35.129:1.2": "Da ging der Hausbesitzer Ghosita zum Ehrwürdigen Ānanda und sagte zu ihm: "
+  "sn35.129:1.2": "Da ging der Hausbesitzer Ghosita zum Ehrwürdigen Ānanda und sagte zu ihm: ",
+  "sn35.129:1.3": "„Herr, Ānanda, man spricht von der ‚Vielfalt der Elemente‘. "
 }
