--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.129:1.2": "Da ging der Hausbesitzer Ghosita zum Ehrwürdigen Ānanda und sagte zu ihm: ",
   "sn35.129:1.3": "„Herr, Ānanda, man spricht von der ‚Vielfalt der Elemente‘. ",
   "sn35.129:1.4": "Wie sprach der Buddha von der Vielfalt der Elemente?“ ",
-  "sn35.129:1.5": "„Hausbesitzer,  man findet das Augenelement, und auch angenehme Bilder und Augenbewusstsein. "
+  "sn35.129:1.5": "„Hausbesitzer,  man findet das Augenelement, und auch angenehme Bilder und Augenbewusstsein. ",
+  "sn35.129:1.6": "Ein angenehmes Gefühl entsteht in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. "
 }
