Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
@@ -8,6 +8,6 @@
   "sn35.129:1.4": "Wie sprach der Buddha von der Vielfalt der Elemente?“ ",
   "sn35.129:1.5": "„Hausbesitzer,  man findet das Augenelement und auch angenehme Bilder und Augenbewusstsein. ",
   "sn35.129:1.6": "Ein angenehmes Gefühl entsteht in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. ",
-  "sn35.129:1.7": "Man findet das Augenelement, und auch schmerzhafte Bilder und Augenbewusstsein. ",
+  "sn35.129:1.7": "Man findet das Augenelement und auch schmerzhafte Bilder und Augenbewusstsein. ",
   "sn35.129:1.8": "Ein schmerzhaftes Gefühl entsteht in Abhängigkeit von einer Berührung, die als schmerzhaft zu erleben ist. "
 }
