--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn35.129:1.7": "Man findet das Augenelement und auch schmerzhafte Bilder und Augenbewusstsein. ",
   "sn35.129:1.8": "Ein schmerzhaftes Gefühl entsteht in Abhängigkeit von einer Berührung, die als schmerzhaft zu erleben ist. ",
   "sn35.129:1.9": "Man findet das Augenelement und auch Bilder, die eine Grundlage für Gleichmut darstellen, und Augenbewusstsein. ",
-  "sn35.129:1.10": "Ein neutrales Gefühl entsteht in Abhängigkeit von einer Berührung, die als neutral zu erleben ist. "
+  "sn35.129:1.10": "Ein neutrales Gefühl entsteht in Abhängigkeit von einer Berührung, die als neutral zu erleben ist. ",
+  "sn35.129:1.11": "Man findet das Ohrelement … das Nasenelement … das Zungenelement … das Körperelement … "
 }
