--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.129:1.11": "Man findet das Ohrelement … das Nasenelement … das Zungenelement … das Körperelement … ",
   "sn35.129:1.17": "das Geistelement und auch angenehme Gedanken und Geistbewusstsein. ",
   "sn35.129:1.18": "Ein angenehmes Gefühl entsteht in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. ",
-  "sn35.129:1.19": "Man findet das Geistelement und auch schmerzhafte Gedanken und Geistbewusstsein. "
+  "sn35.129:1.19": "Man findet das Geistelement und auch schmerzhafte Gedanken und Geistbewusstsein. ",
+  "sn35.129:1.20": "Ein schmerzhaftes Gefühl entsteht in Abhängigkeit von einer Berührung, die als schmerzhaft zu erleben ist. "
 }
