Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.129_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.129:1.18": "Ein angenehmes Gefühl entsteht in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. ",
   "sn35.129:1.19": "Man findet das Geistelement und auch schmerzhafte Gedanken und Geistbewusstsein. ",
   "sn35.129:1.20": "Ein schmerzhaftes Gefühl entsteht in Abhängigkeit von einer Berührung, die als schmerzhaft zu erleben ist. ",
-  "sn35.129:1.21": "Man findet das Geistelement und auch Gedanken, die eine Grundlage für Gleichmut darstellen, und Geistbewusstsein. "
+  "sn35.129:1.21": "Man findet das Geistelement und auch Gedanken, die eine Grundlage für Gleichmut darstellen, und Geistbewusstsein. ",
+  "sn35.129:1.22": "Ein neutrales Gefühl entsteht in Abhängigkeit von einer Berührung, die als neutral zu erleben ist. "
 }
