--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.130:0.1": "Verbundene Lehrreden 35.130 "
+  "sn35.130:0.1": "Verbundene Lehrreden 35.130 ",
+  "sn35.130:0.2": "13. Das Kapitel mit Hausbesitzern "
 }
