--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -1,4 +1,6 @@
 {
   "sn35.130:0.1": "Verbundene Lehrreden 35.130 ",
-  "sn35.130:0.2": "13. Das Kapitel mit Hausbesitzern "
+  "sn35.130:0.2": "13. Das Kapitel mit Hausbesitzern ",
+  "sn35.130:0.3": "Mit Hāliddikāni ",
+  "sn35.130:1.1": "Einmal hielt sich der Ehrwürdige Mahākaccāna im Land der Avantier auf, bei Kuraraghara auf dem Steilen Berg. "
 }
