--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.130:0.3": "Mit Hāliddikāni ",
   "sn35.130:1.1": "Einmal hielt sich der Ehrwürdige Mahākaccāna im Land der Avantier auf, bei Kuraraghara auf dem Steilen Berg. ",
   "sn35.130:1.2": "Da ging der Hausbesitzer Hāliddikāni zum Ehrwürdigen Mahākaccāna und sagte zu ihm: ",
-  "sn35.130:1.3": "„Herr, vom Buddha wurde gesagt: "
+  "sn35.130:1.3": "„Herr, vom Buddha wurde gesagt: ",
+  "sn35.130:1.4": "‚Die Vielfalt der Elemente führt zur Vielfalt der Berührungen, und die Vielfalt der Berührungen führt zur Vielfalt der Gefühle.‘ "
 }
