--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -269,7 +269,7 @@
   "an-name:268.an3.154": "Ehrerbietung ",
   "an-name:269.an3.155": "Morgen ",
   "an-name:270.an3-patipadavagga": "Das Kapitel über Übungen ",
-  "an-name:271.an3.156-162": "Das Kapitel über Nacktheit ",
+  "an-name:271.an3.156-162": "Das Kapitel über Übungen ",
   "an-name:272.an3-kammapathapeyyavagga": "Das Kapitel über Wege zum Begehen von Taten ",
   "an-name:273.an3.163-182": "Wege zum Begehen von Taten ",
   "an-name:274.an3-ragadipeyyalavagga": "Das Kapitel der abgekürzten Texte, die mit Gier beginnen ",
