--- a/translation/de/sabbamitta/sutta/an/an3/an3.156-162_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.156-162_translation-de-sabbamitta.json
@@ -1,6 +1,6 @@
 {
   "an3.156:0.1": "Nummerierte Lehrreden 3.156–162 ",
-  "an3.156:0.2": "16. Das Kapitel über Nacktheit ",
+  "an3.156:0.2": "16. Das Kapitel über Übungen ",
   "an3.156:0.3": "Lehrreden ohne Titel über drei Übungswege ",
   "an3.156:1.1": "„Mönche und Nonnen, es gibt drei Übungswege. ",
   "an3.156:1.2": "Welche drei? ",
