--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -7,5 +7,5 @@
   "sn35.130:1.3": "„Herr, vom Buddha wurde gesagt: ",
   "sn35.130:1.4": "‚Die Vielfalt der Elemente führt zur Vielfalt der Berührungen, und die Vielfalt der Berührungen führt zur Vielfalt der Gefühle.‘ ",
   "sn35.130:1.5": "Wie führt die Vielfalt der Elemente zur Vielfalt der Berührungen und die Vielfalt der Berührungen zur Vielfalt der Gefühle? ",
-  "sn35.130:1.6": "„Hausbesitzer, da sieht ein Mönch mit dem Auge ein Bild und versteht es als angenehm. "
+  "sn35.130:1.6": "„Hausbesitzer, da sieht ein Mönch mit dem Auge ein Bild und versteht: ‚Es ist angenehm.‘ Augenbewusstsein ist da, "
 }
