--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -9,5 +9,5 @@
   "sn35.130:1.5": "Wie führt die Vielfalt der Elemente zur Vielfalt der Berührungen und die Vielfalt der Berührungen zur Vielfalt der Gefühle? ",
   "sn35.130:1.6": "„Hausbesitzer, da sieht ein Mönch mit dem Auge ein Bild und versteht: ‚Es ist angenehm.‘ Augenbewusstsein ist da, ",
   "sn35.130:1.7": "und es entsteht ein angenehmes Gefühl in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. ",
-  "sn35.130:1.8": "Dann sieht er mit dem Auge ein Bild und versteht: ‚Es ist schmerzhaft.‘ "
+  "sn35.130:1.8": "Dann sieht er mit dem Auge ein Bild und versteht: ‚Es ist schmerzhaft.‘ Augenbewusstsein ist da, "
 }
