Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.130_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.130:2.2": "riecht mit der Nase einen Duft … ",
   "sn35.130:2.3": "schmeckt mit der Zunge einen Geschmack … ",
   "sn35.130:2.4": "empfindet mit dem Körper eine Berührung … ",
-  "sn35.130:2.5": "erkennt mit dem Geist einen Gedanken und versteht: ‚Er ist angenehm.‘ Geistbewusstsein ist da, "
+  "sn35.130:2.5": "erkennt mit dem Geist einen Gedanken und versteht: ‚Er ist angenehm.‘ Geistbewusstsein ist da, ",
+  "sn35.130:2.6": "und es entsteht ein angenehmes Gefühl in Abhängigkeit von einer Berührung, die als angenehm zu erleben ist. "
 }
