Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -734,5 +734,6 @@
   "dn16:3.48.6": "Za tri meseca, računajući od sada, Tathāgata će ući u parinibbānu.’",
   "dn16:3.48.7": "Da mu se on života radi ponovo vrati, to nije moguće. ",
   "dn16:3.48.8": "A sada, Ānanda, hajdemo do Velike šume, do paviljona sa šiljastim krovom.”",
-  "dn16:3.48.9": "„Da, poštovani gospodine,” odgovori Ānanda."
+  "dn16:3.48.9": "„Da, poštovani gospodine,” odgovori Ānanda.",
+  "dn16:3.49.1": "Kada su stigli, reče on Ānandi:"
 }
