Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -736,5 +736,6 @@
   "dn16:3.48.8": "A sada, Ānanda, hajdemo do Velike šume, do paviljona sa šiljastim krovom.”",
   "dn16:3.48.9": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:3.49.1": "Kada su stigli, reče on Ānandi:",
-  "dn16:3.49.2": "„Hajde, Ānanda, obiđi monahe koji žive u okolini Vesālija i reci im da se okupe u velikoj dvorani.”"
+  "dn16:3.49.2": "„Hajde, Ānanda, obiđi monahe koji žive u okolini Vesālija i reci im da se okupe u velikoj dvorani.”",
+  "dn16:3.49.3": "„Da, poštovani gospodine”, odgovori on i pošto je okupio što je više mogao monaha, vrati se do Blaženog. Kad je stigao, pokloni mu se i reče:"
 }
