Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -739,5 +739,6 @@
   "dn16:3.49.2": "„Hajde, Ānanda, obiđi monahe koji žive u okolini Vesālija i reci im da se okupe u velikoj dvorani.”",
   "dn16:3.49.3": "„Da, poštovani gospodine”, odgovori on i pošto je okupio što je više mogao monaha, vrati se do Blaženog. Kad je stigao, pokloni mu se i reče:",
   "dn16:3.49.4": "„Monaška zajednica je okupljena, poštovani gospodine. Neka Blaženi učini ono što misli da treba.”",
-  "dn16:3.50.1": "Tako Blaženi otide do velike dvorane i sede na unapred pripremljeno mesto. "
+  "dn16:3.50.1": "Tako Blaženi otide do velike dvorane i sede na unapred pripremljeno mesto. ",
+  "dn16:3.50.2": "A onda reče monasima:"
 }
