Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -740,5 +740,6 @@
   "dn16:3.49.3": "„Da, poštovani gospodine”, odgovori on i pošto je okupio što je više mogao monaha, vrati se do Blaženog. Kad je stigao, pokloni mu se i reče:",
   "dn16:3.49.4": "„Monaška zajednica je okupljena, poštovani gospodine. Neka Blaženi učini ono što misli da treba.”",
   "dn16:3.50.1": "Tako Blaženi otide do velike dvorane i sede na unapred pripremljeno mesto. ",
-  "dn16:3.50.2": "A onda reče monasima:"
+  "dn16:3.50.2": "A onda reče monasima:",
+  "dn16:3.50.3": "„Monasi, pošto ste dobro savladali učenje koje sam razumeo na osnovu sopstvenog iskustva i kojem sam vas podučio, treba da ga se držite, negujete, često praktikujete, tako da ovaj svetački život opstane što duže. To će biti na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića."
 }
