Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -745,5 +745,6 @@
   "dn16:3.50.4": "A kakvo je to učenje koje sam razumeo na osnovu sopstvenog iskustva i kojem sam vas podučio?",
   "dn16:3.50.5": "To su četiri temelja svesnosti, četiri prave vrste nastojanja, četiri osnove duhovne moći, pet sposobnosti, pet snaga, sedam elemenata probuđenja, plemeniti osmostruki put.",
   "dn16:3.51.1": "To je, monasi, to učenje koje sam razumeo na osnovu sopstvenog iskustva i kojem sam vas podučio. To je učenje kojeg treba da se držite, negujete, često praktikujete, tako da ovaj svetački život opstane što duže, na korist mnogima, na sreću mnogima, iz saosećanja prema ovom svetu, na dobrobit, korist i sreću božanskih i ljudskih bića.”",
-  "dn16:3.51.2": "Dalje Blaženi reče monasima:"
+  "dn16:3.51.2": "Dalje Blaženi reče monasima:",
+  "dn16:3.51.3": "„Monasi, sada vam i ovo kažem:"
 }
