Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -752,5 +752,6 @@
   "dn16:3.51.6": "Tri meseca od sada, Tathāgata će ući u konačno oslobođenje.”",
   "dn16:3.51.7": "Tako reče Blaženi.",
   "dn16:3.51.8": "A zatim i ovo dodade učitelj:",
-  "dn16:3.51.9": "„Došao je trenutak,"
+  "dn16:3.51.9": "„Došao je trenutak,",
+  "dn16:3.51.10": "sasvim malo života mi još ostade."
 }
