Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -754,5 +754,6 @@
   "dn16:3.51.8": "A zatim i ovo dodade učitelj:",
   "dn16:3.51.9": "„Došao je trenutak,",
   "dn16:3.51.10": "sasvim malo života mi još ostade.",
-  "dn16:3.51.11": "Napustivši vas, odlazim,"
+  "dn16:3.51.11": "Napustivši vas, odlazim,",
+  "dn16:3.51.12": "jer samoga sebe uzeh za utočište."
 }
