Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -761,5 +761,6 @@
   "dn16:3.51.15": "Dobro odmerenim mislima,",
   "dn16:3.51.16": "zaštitite sopstveni um.",
   "dn16:3.51.17": "Ko u ovom učenju i praksi",
-  "dn16:3.51.18": "zaista marljiv živi,"
+  "dn16:3.51.18": "zaista marljiv živi,",
+  "dn16:3.51.19": "napustivši krug preporađanja,"
 }
