Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -762,5 +762,6 @@
   "dn16:3.51.16": "zaštitite sopstveni um.",
   "dn16:3.51.17": "Ko u ovom učenju i praksi",
   "dn16:3.51.18": "zaista marljiv živi,",
-  "dn16:3.51.19": "napustivši krug preporađanja,"
+  "dn16:3.51.19": "napustivši krug preporađanja,",
+  "dn16:3.51.20": "taj će na kraj patnje stići."
 }
