Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -777,5 +777,6 @@
   "dn16:4.2.5": "A koje četiri?",
   "dn16:4.2.6": "Zato što nismo razumeli, nismo proniknuli u plemenitu vrlinu, i vi i ja smo dugo putovali ovim krugom preporađanja.",
   "dn16:4.2.7": "Zato što nismo razumeli, nismo proniknuli u plemenitu koncentraciju, i vi i ja smo dugo putovali ovim krugom preporađanja.",
-  "dn16:4.2.8": "Zato što nismo razumeli, nismo proniknuli u plemenitu mudrost, i vi i ja smo dugo putovali ovim krugom preporađanja."
+  "dn16:4.2.8": "Zato što nismo razumeli, nismo proniknuli u plemenitu mudrost, i vi i ja smo dugo putovali ovim krugom preporađanja.",
+  "dn16:4.2.9": "Zato što nismo razumeli, nismo proniknuli u plemenito oslobođenje, i vi i ja smo dugo putovali ovim krugom preporađanja."
 }
