Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -792,5 +792,6 @@
   "dn16:4.3.10": "onaj što jasno vidi, slobodan postade.",
   "dn16:4.4.1": "Dok je živeo kraj Bhaṇde, Blaženi je često govorio monasima o Dhammi:",
   "dn16:4.4.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
-  "dn16:4.4.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
+  "dn16:4.4.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
+  "dn16:4.4.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
 }
